ACC-2101 Code cleanup